<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginAndRegistration.StartActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="635dp"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/project_font"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_registration_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edittext"
                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/email"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_registration_full_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableEnd="@drawable/ic_username"
                android:hint="@string/full_name"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_registration_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableEnd="@drawable/ic_person_trans"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ed_registration_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableEnd="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_birth_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableEnd="@drawable/ic_calendar"
                android:hint="@string/birth_date"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textSize="15sp" />


            <RadioGroup
                android:id="@+id/radio_grp_gender"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="23dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_btn_male"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_male" />

                <RadioButton
                    android:id="@+id/radio_btn_female"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:buttonTint="@color/purple"
                    android:text="@string/female"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_female" />

            </RadioGroup>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_btn"
                android:backgroundTint="@color/purple"
                android:text="@string/cont"
                android:textAllCaps="false"
                android:textSize="17sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>