<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".Hobby.HobbiesActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_hobbies"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/tv_choose_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/project_font"
                android:text="@string/choose_hobbies"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabIndicator="@drawable/custom_gray_btn"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorColor="@null"
                app:tabIndicatorGravity="stretch"
                app:tabMode="fixed"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="@color/purple"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                app:tabTextColor="@color/black">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_sport"
                    android:textAllCaps="false" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_leisure"
                    android:textAllCaps="false" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_games"
                    android:textAllCaps="false" />


            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_categories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tab_categories" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="593dp"
        android:background="@drawable/custom_btn"
        android:backgroundTint="@color/purple"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginStart="160dp"
        android:layout_marginTop="662dp"
        android:visibility="gone" />

</RelativeLayout>